Lego Editor Change Log

  *  Implemented Copy/Paste for Assertions, D / Q / V and Expressions anywhere else the appear
  *  Fixed null pointers that could happen with empty measurement values 
  *  artf227507 Fixed bound change not allowing save bug
  *  Fixed a bug that caused a doubleclick to sometimes not open a lego for editing